test/1.2/errors/T_ESYNTAX_16.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
import "testing.dml";

method test -> (bool ok) {
    /// ERROR ESYNTAX
    local const char *a = "a\xc5\nå";
    ok = false;
}
